data/style.css
/* ... */
/***** general form markup *****/

input.text, input.submit, select, textarea {
  background-color: $secbg$;
  color: $maintext$;
  border: 1px solid $secborder$;
  font: 14px "Tahoma", "Arial", sans-serif;
  padding: 0 1px 1px 1px;
  margin: 1px;
}
form, fieldset           { border: 0; display: block }
legend                   { display: none; }
optgroup option          { padding-left: 10px; font-style: normal; }
input.submit             { background: $boxbg$; padding: 1px; }
input.text, select       { width: 200px; }
fieldset.submit          { width: 100%; text-align: center; margin: 5px; }
fieldset.submit input[type=submit] { width: 150px; }
fieldset.submit input[type=checkbox] { margin: 0 5px 0 15px; }
fieldset.submit h2       { font-size: 13px!important; }
td.label, td.label label { width: 130px; }
td.label label           { display: block; }
td.field label           { margin: 0 5px 0 5px; }
table.formtable          { margin: 0 20px 20px 20px; }
table.formtable td       { padding: 0; }
table.formtable tr.newfield td { padding-top: 5px; }
table.formtable tr.newpart td { padding-top: 20px; font-weight: bold; }

.linkradio { padding: 2px }
.linkradio label { color: $link$; cursor: pointer }
.linkradio label:before { content: '✗' }
.linkradio input:checked + label { color: $maintext$ }
.linkradio input:checked + label:before { content: '✓' }
.linkradio em { font-weight: normal; font-style: normal; color: $grayedout$ }

div.spinner { content: ''; border: 3px solid #9eaebd; border-bottom-color: transparent; border-radius: 100%; animation: spin 1s infinite linear; width: 14px; height: 14px; display: inline-block; margin: auto }
@keyframes spin { from { transform:rotate(0deg); } to { transform:rotate(360deg); } }

.textpreview .head { width: 100%; text-align: right }
.textpreview .head > * { margin-left: 10px; font-style: normal }
.textpreview textarea { width: 100%; box-sizing: border-box }
.textpreview .preview { width: 100%; box-sizing: border-box; border: 1px solid $secborder$; margin: 1px; padding: 5px }
fieldset.submit .textpreview { margin: -15px auto 0 auto }



/***** menu *****/


#menulist a                  { color: $maintext$; text-decoration: none; }
#menulist a:hover            { border-bottom: 1px dotted $maintext$; }
#menulist                    { position: absolute; left: 30px; top: 190px; width: 160px; }
#menulist div.menubox        { margin: 0 0 10px 0; border: 1px solid $border$; background: $boxbg$; }
#menulist div.menubox div    { padding: 2px 7px; }
#menulist h2                 { border-bottom: 1px solid $border$; background: $boxbg$; padding: 1px 3px; }
#menulist h2, #menulist h2 a { font-size: 13px; color: $maintext$; }
#menulist h2 #lang_select    { float: right; padding-top: 1px; }
#menulist dt                 { display: block; float: left; width: 97px; font-style: italic; }
#menulist dd                 { width: 45px; float: left; text-align: right; }
#menulist p                  { text-align: center; }
#menulist #search input.text { width: 141px; margin: 0 0 3px 7px }
#menulist #search input.submit { display: none; }
#dd_box abbr                 { margin: 2px 5px 2px 0!important; }
#menulist .notifyget         { display: inline-block; width: 135px; padding: 4px; background: $warnbg$; border: 1px solid $warnborder$; }
#menulist .logout            { border: 0; background: none; color: $maintext$; cursor: pointer }
#menulist .logout:hover      { text-decoration: underline }

#patreon { opacity: 0.6; border-bottom: none!important }
#patreon:hover { opacity: 1 }




/***** main content *****/

#maincontent {
  position: absolute;
  top: 169px;
  left: 200px;
  right: 30px;
  margin: 0;
  padding-bottom: 50px!important;
}
.mainbox h1, .mainbox h2 {
  font-family: "Futura", "Century New Gothic", "Arial", Serif;
  font-weight: normal;
  font-size: 14px;
}
div.mainbox, table.mainbox td {
  border: 1px solid $border$;
  margin: 21px 0 -10px 0;
  padding: 5px;
  background: $boxbg$;
}
.mainbox h1          { color: $boxtitle$; font-size: 24px; margin: -5px 0 15px 0; }
.mainbox h2.alttitle { color: $alttitle$; margin: -17px 0 15px 15px; font-weight: normal; }
.mainbox p           { margin: 3px 20px; }
.mainbox div p,
.mainbox table p     { margin: 0; }
.mainbox h2          { font-weight: bold; font-size: 16px; margin: 10px 0 0 5px; }
a.addnew, p.addnew   { float: right; margin: 0 }

.mainbox.threelayout    { border-collapse: separate; border-spacing: 10px; margin: 10px -10px -20px -10px; min-width: 100%; }
.mainbox.threelayout td { width: 32%; padding: 0 2px 10px 2px; }
.mainbox.threelayout h1 { margin: 0; font-size: 18px; font-weight: bold; }
.mainbox.threelayout h2 { font-size: 14px; margin-top: 3px; }
.mainbox.threelayout a.right { float: right; }
.mainbox.threelayout ul { list-style-type: none; margin-left: 10px; }
.mainbox.threelayout h1 a { color: $boxtitle$; }



/***** main tabs *****/

ul.maintabs          { display: inline; margin: 0; }
ul.maintabs.notfirst { display: block; height: 20px }
ul.maintabs li       { display: inline; list-style-type: none }
ul.maintabs li a, ul.maintabs li b {
  float: right;
  display: block;
  height: 14px;
  padding: 1px 7px 5px 7px;
  margin: 0 0 0 10px;
}
ul.maintabs li a {
  border: 1px solid $border$;
  border-bottom: none;
  background-color: $tabbg$;
  color: $grayedout$;
}
ul.maintabs.notfirst li a,
ul.maintabs.notfirst li b        { margin-top: 20px }
ul.maintabs.bottom li a,
ul.maintabs.bottom li b          { margin-top: 10px; padding: 4px 7px 2px 7px }
ul.maintabs.bottom li a          { border-bottom: 1px solid $border$; border-top: none }
ul.maintabs li.left a,
ul.maintabs li.left b            { float: left; margin-left: 0; margin-right: 10px }
ul.maintabs li b                 { margin-left: -2px; margin-right: -7px }
ul.maintabs li.left b            { margin-left: -7px; margin-right: -2px }
/* ... */

